# faultspan

./: .env.example  .gitignore  FAULTSPAN_MASTER_PLAN.md  README.md  gltest.config.yaml  package-lock.json  package.json  playwright.config.ts  pytest.ini
.github/workflows/: ci.yml  studionet-smoke.yml
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: case-workflow-panel.tsx  create-case-dialog.tsx  faultspan-prototype.tsx  (+6 more)
contracts/: faultspan.py
deploy/: 001_deploy_faultspan.ts
design/: AESTHETIC_DIRECTION.md  COMPONENT_INVENTORY.md  DISCOVERY.md  tokens.css  wireframes.html
docs/: CLOUDFLARE_WORKER_DEPLOY.md  DEMO_RUNBOOK.md  DEPLOYMENT.md  ENVIRONMENT.md  INTEGRATIONS.md  KNOWN_ISSUES.md  LIVE_PROOF.md  PRODUCTION_HARDENING.md  RECOVERY.md  SECOND_PROOF_RUNBOOK.md  SUPABASE_SCHEMA.sql
evaluation/: README.md  fixtures.json  validate_fixtures.py
pitch/: faultspan-deck.html
scripts/: reconcile-studionet.ts  reset-demo.ps1  seed-demo.ps1  studionet-finish-case.ts  studionet-second-proof.ts  studionet-smoke.ts
services/platform/: pyproject.toml
services/platform-worker/: .dev.vars.example  package.json  tsconfig.json  wrangler.jsonc
services/platform/src/faultspan_platform/: __init__.py  a2a.py  config.py  evidence.py  main.py  models.py  projection.py  security.py  x402.py
services/platform/tests/: test_platform.py
tests/direct/: conftest.py  test_faultspan.py
tests/e2e/: app.spec.ts
tests/integration/: test_faultspan_studionet.py
(+12 files in other folders)
