[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultspan-platform"
version = "0.1.0"
description = "Faultspan evidence and integration service"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "pydantic>=2.11,<3",
  "eth-account>=0.13,<1",
  "supabase>=2.18,<3"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/faultspan_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
